      point to folder 'src/core'.
    
    
OTHER CHANGES

    o The Windows and Plastic L&fs have been tweaked for Windows Vista.
    o Overhauled the Windows combobox layout and rendering.
    o Improved appearance of the Looks demo tabs on Windows.
    o Password field antialiasing honors the field's aa hint
      and uses subpixel aa if available.
    
    
    
---------------------------------------------------------------------------

Find below the change history for older releases.



                    JGoodies Looks, Version 1.3.2 
                            Release Notes
                        

INTRODUCTION

    This update fixes a couple of bugs, most noticably in the drop shadow 
    feature. Also the source code style has been slightly improved.


BUGS FIXED

    #43: ShadowPopupFactory doesn't respect the lightweight property.
    #45: NPE in ShadowPopup.hide().
    #47: JavaCup.gif reported missing in Windows L&f.
    #50: ToolBarUI doesn't take the orientation into account.
    #53: ClassCastException in ShadowPopup.
    #56: NPE in ShadowPopupFactory on OS X 10.4.
    

OTHER CHANGES

    o Set 'build.compile.source' and 'build.compile.target' to '1.4'
      in the default.properties; build.xml honors these settings.
    o Improved the style of the Java sources:
      + removed some tab characters,
      + ensured consistent modifier order,
      + fixed JavaDoc tags.
    
    
---------------------------------------------------------------------------

Find below the change history for older releases.



                    JGoodies Looks, Version 1.3.1 
                            Release Notes
                        

INTRODUCTION

    This update fixes bug #38; it's worth to ship a new version.
    All other known non-font related issues could be fixed too.


BUGS FIXED

    o #02: Plastic combo lacks 3D effect in 3D toolbar.
    o #36: Plastic l&fs lack auditory cues.
    o #37: Extra non-western themes don't work with Looks 1.3.